--- a/config/primo.yml
+++ b/config/primo.yml
@@ -101,8 +101,8 @@ statuses:
   
 sources:
   nyu_aleph:
-     base_url: "http://aleph.library.nyu.edu"
-     rest_url: "http://aleph.library.nyu.edu:1891/rest-dlf"
+     base_url: "http://alephstage.library.nyu.edu"
+     rest_url: "http://alephstage.library.nyu.edu:1891/rest-dlf"
      illiad_url: "http://illdev.library.nyu.edu"
      type: aleph
      class_name: NyuAleph
@@ -260,8 +260,8 @@ sources:
      class_name: NyuAleph
      local_base: "PRIMOCOMMON"
   ADCOURSES:
-     base_url: "http://aleph.library.nyu.edu"
-     rest_url: "http://aleph.library.nyu.edu:1891/rest-dlf"
+     base_url: "http://alephstage.library.nyu.edu"
+     rest_url: "http://alephstage.library.nyu.edu:1891/rest-dlf"
      illiad_url: "http://illdev.library.nyu.edu"
      type: aleph
      class_name: NyuAleph
